kube/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: inthegods
  namespace: default
  labels:
    app: inthegods
spec:
  selector:
    app: inthegods
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
