kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: inthegods-ingress
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
    - hosts:
        - inthegods.co.uk
        - www.inthegods.co.uk
      secretName: inthegods-tls
  rules:
    - host: inthegods.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inthegods
                port:
                  number: 80
    - host: www.inthegods.co.uk
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: inthegods
                port:
                  number: 80
